Subida de ejercicios Flask.

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Iniciar Sesión</h2>
-    <form action="procesar_login.php" method="post">
+    <form action="/" method="post">
         <label for="usuario">Usuario:</label>
         <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu usuario" required><br><br>
 
@@ -16,3 +16,6 @@
     </form>
 </body>
 </html>
+
+{{ user }}
+{{ password }}
